[FIX] Scrollbar won't move content when spawning

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -16,6 +16,10 @@
   background: #555;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
